--- a/codbex-orders-widgets/subviews/avarage-purchase-order-price.html
+++ b/codbex-orders-widgets/subviews/avarage-purchase-order-price.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="avarage-purchase-order-price"
+    ng-controller="AvaragePurchaseOrderPriceController">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Top Customer</title>
+        <script type="text/javascript" src="../services/avarage-purchase-order-price.js"></script>
+        <script type="text/javascript" src="/js/avarage-purchase-order-price-controller.js"></script>
+    </head>
+
+    <body>
+        <div class="fd-col fd-col--6 fd-col-md--3 fd-col-lg--3 fd-col-xl--3">
+            <div role="button" tabindex="0" class="fd-tile fd-tile--feed tile-auto-layout"
+                ng-click="openPerspective('sales-orders')">
+                <div class="fd-tile__header tile-auto-layout">
+                    <div class="fd-tile__title">Average Purchase Order Price</div>
+                </div>
+                <fd-card-subtitle>last month
+                </fd-card-subtitle>
+                <div class="fd-tile__content tile-auto-layout">
+                    <div class="fd-tile__section">
+                        <div class="fd-numeric-content">
+                            <div class="fd-numeric-content__kpi-container">
+                                <div class="fd-numeric-content__kpi">
+                                    {{OrderData.AveragePurchaseOrderPrice | number:2 }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fd-tile__footer tile-auto-layout">
+                    <span class="fd-tile__footer-text">BGN</span>
+                </div>
+            </div>
+        </div>
+    </body>
+
+</html>
