--- a/codbex-orders-widgets/subviews/average-purchase-order-price.html
+++ b/codbex-orders-widgets/subviews/average-purchase-order-price.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="avarage-sales-order-price"
-    ng-controller="AvarageSalesOrderPriceController">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="average-purchase-order-price"
+    ng-controller="AveragePurchaseOrderPriceController">
 
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Top Customer</title>
-        <script type="text/javascript" src="../services/avarage-sales-order-price.js"></script>
-        <script type="text/javascript" src="/js/avarage-sales-order-price-controller.js"></script>
+        <script type="text/javascript" src="../services/average-purchase-order-price.js"></script>
+        <script type="text/javascript" src="/js/average-purchase-order-price-controller.js"></script>
     </head>
 
     <body>
@@ -16,7 +16,7 @@
             <div role="button" tabindex="0" class="fd-tile fd-tile--feed tile-auto-layout"
                 ng-click="openPerspective('sales-orders')">
                 <div class="fd-tile__header tile-auto-layout">
-                    <div class="fd-tile__title">Average Sales Order Price</div>
+                    <div class="fd-tile__title">Average Purchase Order Price</div>
                 </div>
                 <fd-card-subtitle>last month
                 </fd-card-subtitle>
@@ -25,7 +25,7 @@
                         <div class="fd-numeric-content">
                             <div class="fd-numeric-content__kpi-container">
                                 <div class="fd-numeric-content__kpi">
-                                    {{OrderData.AverageSalesOrderPrice | number:2 }}
+                                    {{OrderData.AveragePurchaseOrderPrice | number:2 }}
                                 </div>
                             </div>
                         </div>
