fix: file paths to controllers

--- a/codbex-orders-widgets/subviews/average-purchase-order-price.html
+++ b/codbex-orders-widgets/subviews/average-purchase-order-price.html
@@ -6,9 +6,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Top Customer</title>
+        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
         <script type="text/javascript" src="../services/average-purchase-order-price.js"></script>
-        <script type="text/javascript" src="/js/average-purchase-order-price-controller.js"></script>
+        <script type="text/javascript"
+            src="/services/web/codbex-orders-widgets/subviews/js/js/average-purchase-order-price-controller.js">
+        </script>
     </head>
 
     <body>
