--- a/codbex-orders-widgets/subviews/new-sales-orders.html
+++ b/codbex-orders-widgets/subviews/new-sales-orders.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>New Sales Orders</title>
+        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
         <script type="text/javascript" src="../services/new-sales-orders.js"></script>
-        <script type="text/javascript" src="/js/new-sales-orders-controller.js"></script>
+        <script type="text/javascript"
+            src="/services/web/codbex-orders-widgets/subviews/js/new-sales-orders-controller.js"></script>
     </head>
 
     <body>
