--- a/codbex-orders-widgets/subviews/top-customer.html
+++ b/codbex-orders-widgets/subviews/top-customer.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
         <script type="text/javascript" src="../services/top-customer.js"></script>
-        <script type="text/javascript"
-            src="/services/web/codbex-orders-widgets/subviews/js/js/top-customer-controller.js"></script>
+        <script type="text/javascript" src="/services/web/codbex-orders-widgets/subviews/js/top-customer-controller.js">
+        </script>
     </head>
 
     <body>
