--- a/codbex-orders-widgets/subviews/new-sales-orders.html
+++ b/codbex-orders-widgets/subviews/new-sales-orders.html
@@ -5,10 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
+        </script>
+        <link type="text/css" rel="stylesheet"
+            href="/services/js/resources-core/services/loader.js?id=application-view-css" />
         <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
         <script type="text/javascript" src="../services/new-sales-orders.js"></script>
-        <script type="text/javascript"
-            src="/services/web/codbex-orders-widgets/subviews/js/new-sales-orders-controller.js"></script>
+        <script type="text/javascript" src="/services/web/codbex-orders-widgets/js/new-sales-orders-controller.js">
+        </script>
     </head>
 
     <body>
