--- a/codbex-orders-widgets/subviews/top-sales-orders.html
+++ b/codbex-orders-widgets/subviews/top-sales-orders.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet"
+            href="/services/js/resources-core/services/loader.js?id=application-view-css" />
         <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
         <script type="text/javascript" src="../services/top-sales-order.js"></script>
         <script type="text/javascript"
