chore: more styling

--- a/codbex-orders-widgets/subviews/new-sales-orders.html
+++ b/codbex-orders-widgets/subviews/new-sales-orders.html
@@ -13,6 +13,16 @@
         <script type="text/javascript" src="../services/new-sales-orders.js"></script>
         <script type="text/javascript" src="/services/web/codbex-orders-widgets/js/new-sales-orders-controller.js">
         </script>
+
+        <style>
+            .tile-auto-layout {
+                min-height: auto;
+                height: auto;
+                width: auto;
+                max-width: 100%;
+            }
+
+        </style>
     </head>
 
     <body>
