--- a/codbex-orders-widgets/subviews/average-purchase-order-price.html
+++ b/codbex-orders-widgets/subviews/average-purchase-order-price.html
@@ -13,6 +13,16 @@
         <script type="text/javascript"
             src="/services/web/codbex-orders-widgets/subviews/js/average-purchase-order-price-controller.js">
         </script>
+
+        <style>
+            .tile-auto-layout {
+                min-height: auto;
+                height: auto;
+                width: auto;
+                max-width: 100%;
+            }
+
+        </style>
     </head>
 
     <body>
