--- a/codbex-orders-widgets/subviews/top-customer.html
+++ b/codbex-orders-widgets/subviews/top-customer.html
@@ -11,6 +11,16 @@
         <script type="text/javascript" src="../services/top-customer.js"></script>
         <script type="text/javascript" src="/services/web/codbex-orders-widgets/subviews/js/top-customer-controller.js">
         </script>
+
+        <style>
+            .tile-auto-layout {
+                min-height: auto;
+                height: auto;
+                width: auto;
+                max-width: 100%;
+            }
+
+        </style>
     </head>
 
     <body>
