--- a/codbex-orders-widgets/subviews/top-purchase-orders.html
+++ b/codbex-orders-widgets/subviews/top-purchase-orders.html
@@ -12,6 +12,16 @@
         <script type="text/javascript" src="../services/top-purchase-orders.js"></script>
         <script type="text/javascript"
             src="/services/web/codbex-orders-widgets/subviews/js/top-purchase-orders-controller.js"></script>
+
+        <style>
+            .tile-auto-layout {
+                min-height: auto;
+                height: auto;
+                width: auto;
+                max-width: 100%;
+            }
+
+        </style>
     </head>
 
     <body>
