update: widgets are now working

--- a/codbex-orders-widgets/subviews/average-purchase-order-price.html
+++ b/codbex-orders-widgets/subviews/average-purchase-order-price.html
@@ -3,16 +3,19 @@
     ng-controller="AveragePurchaseOrderPriceController">
 
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
+        <title dg-view-title></title>
+        <script type="text/javascript" src="../services/average-purchase-order-price.js"></script>
+        <theme></theme>
+        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
+        </script>
         <link type="text/css" rel="stylesheet"
             href="/services/js/resources-core/services/loader.js?id=application-view-css" />
-        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
-        <script type="text/javascript" src="../services/average-purchase-order-price.js"></script>
-        <script type="text/javascript"
-            src="/services/web/codbex-orders-widgets/subviews/js/average-purchase-order-price-controller.js">
-        </script>
+        <script type="text/javascript" src="/webjars/chart.js/dist/chart.umd.js"></script>
+        <script type="text/javascript" src="../js/average-purchase-order-price-controller.js"></script>
 
         <style>
             .tile-auto-layout {
