--- a/codbex-orders-widgets/subviews/top-sales-orders.html
+++ b/codbex-orders-widgets/subviews/top-sales-orders.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="top-sales-order" ng-controller="TopSalesOrderController">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="top-sales-orders" ng-controller="TopSalesOrdersController">
 
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
+        <title dg-view-title></title>
+        <script type="text/javascript" src="../services/top-sales-orders.js"></script>
+        <theme></theme>
+        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
+        </script>
         <link type="text/css" rel="stylesheet"
             href="/services/js/resources-core/services/loader.js?id=application-view-css" />
-        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
-        <script type="text/javascript" src="../services/top-sales-order.js"></script>
-        <script type="text/javascript"
-            src="/services/web/codbex-orders-widgets/subviews/js/top-sales-order-controller.js"></script>
+        <script type="text/javascript" src="/webjars/chart.js/dist/chart.umd.js"></script>
+        <script type="text/javascript" src="../js/top-sales-orders-controller.js"></script>
 
         <style>
             .tile-auto-layout {
