--- a/codbex-orders-widgets/subviews/new-sales-orders.html
+++ b/codbex-orders-widgets/subviews/new-sales-orders.html
@@ -2,17 +2,19 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="new-sales-orders" ng-controller="NewSalesOrdersController">
 
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" sizes="any" href="data:;base64,iVBORw0KGgo=">
+        <title dg-view-title></title>
+        <script type="text/javascript" src="../services/new-sales-orders-price.js"></script>
+        <theme></theme>
         <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=application-view-js">
         </script>
         <link type="text/css" rel="stylesheet"
             href="/services/js/resources-core/services/loader.js?id=application-view-css" />
-        <script type="text/javascript" src="/services/js/resources-core/services/loader.js?id=ide-view-js"></script>
-        <script type="text/javascript" src="../services/new-sales-orders.js"></script>
-        <script type="text/javascript" src="/services/web/codbex-orders-widgets/js/new-sales-orders-controller.js">
-        </script>
+        <script type="text/javascript" src="/webjars/chart.js/dist/chart.umd.js"></script>
+        <script type="text/javascript" src="../js/new-sales-orders-controller.js"></script>
 
         <style>
             .tile-auto-layout {
